syntax = "proto3";

import "status.proto";
import "google/protobuf/wrappers.proto";

package user_code;

// BarcodeService
service BarcodeService {
  // Unary
  rpc GetBarcode (Filter) returns (Barcode);
  // Server streaming
  rpc GetBarcodes (Filter) returns (stream Barcode);
  // Client streming
  rpc UploadFiles (stream Chunks) returns (Result);
  // Bi Direction
  rpc Chat (stream ChatMessage) returns (stream google.protobuf.StringValue);
}

message Filter {
  string query = 1;
}

message Barcode {
  string user = 1;
  string service_type = 2;
  string barcode_num = 3;
}

message Result {
  status.StatusCode status_code = 1;
  string message = 2;
}

message Chunks {
  bytes content = 1;
}

message ChatMessage {
	string name = 1;
	string message = 2;
}